files updated for upcoming FESTC release

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,19 @@
 **/*.o
 data
 ref
+CVS
+src/libs
+scripts/aa.txt
+scripts/diff
+scripts/filter_shapefile.csh
+scripts/filter_surf_zone.csh
+scripts/generate_surrogates_47021.csh
+scripts/overlay_sites_on_egrid.csh
+src/raster/extractEPIC2CMAQ.cpp.201605
+src/raster/extractEPIC2CMAQ_epic0509_120216.cpp
+src/raster/extractEPIC2CMAQ_epic0509_SWAT.cpp
+src/raster/extractEPIC2CMAQ_swat20170301_soilW_fbare.cpp
+src/raster/extractEPIC2CMAQ_swat20170301_soilW_fbare_short.cpp
+src/raster/extractEPICYearlyAverage2CMAQ_csv_SWAT_201608.cpp
+src/raster/extractdaily_info.csv
+src/vector/
