--- a/.gitignore
+++ b/.gitignore
@@ -8,13 +8,11 @@ ref
 CVS
 src/libs
 !src/libs/netcdf-4.0.1/local
-!src/libs/proj-4.9.3/local
+!src/libs/proj-4.8.0/local
 !src/libs/hdf5-1.8.13/local
 !src/libs/gdal-2.0.2/local
 !src/libs/geos-3.5.0/local
 !src/libs/hdf-4.2.11/local
-src/libs/gdal-2.0.2/.libs/libgdal.a
-src/libs/gdal-2.0.2/local/lib/libgdal.a
 scripts/aa.txt
 scripts/diff
 scripts/filter_shapefile.csh
@@ -29,9 +27,12 @@ src/raster/extractEPIC2CMAQ_swat20170301_soilW_fbare_short.cpp
 src/raster/extractEPICYearlyAverage2CMAQ_csv_SWAT_201608.cpp
 src/raster/extractdaily_info.csv
 src/vector/
+pg_srgtools/LOGS
+pg_srgtools/outputs
+git/
+old/
 data_old
 output
 pg_srgcreate
+.gitignore
 tmp
-pg_srgtools/LOGS/
-pg_srgtools/outputs/
